--- a/html-10/index.css
+++ b/html-10/index.css
@@ -10,7 +10,7 @@
 
 body 
 {
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #021024;
     color: #c1e8ff
 }
@@ -20,7 +20,7 @@ body
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 10% 15%;
+    padding: 8% 15%;
 }
 
 .conteudo-section
@@ -91,4 +91,15 @@ strong
   color: #021024;
   background-color: #5483b3;
  
+}
+
+.rodape
+{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  color: #c1e8ff;
+  display: flex;
+  justify-content: center;
+  background-color: #7da0ca;
+  padding: 24px;
 }
