--- a/html-14/css/about.css
+++ b/html-14/css/about.css
@@ -64,11 +64,15 @@
 
   .conteudo-section
   {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
     
+  }
+  .perfil
+  {
+
   }
 
   .rodape
