--- a/html-14/css/curriculo.css
+++ b/html-14/css/curriculo.css
@@ -64,7 +64,7 @@
 
   .conteudo-section
   {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -80,6 +80,7 @@
     justify-content: center;
     background-color: var(--azul-3);
     padding: 24px;
+    text-align: center;
   }
 
   .link
@@ -88,3 +89,7 @@
     color: var(--azul-1);
   }
   
+  .perfil
+  {
+
+  }
