--- a/html-15/css/curriculo.css
+++ b/html-15/css/curriculo.css
@@ -60,6 +60,7 @@
       align-items: center;
       justify-content: space-between;
       padding: 5% 15%;
+      gap: 82px;
   }
 
   .conteudo-section
@@ -93,3 +94,21 @@
   {
 
   }
+
+  @media (max-width: 1200px)
+  {
+    .conteudo
+    {
+      flex-direction: column-reverse; 
+    }
+    .cabecalho
+    {
+      padding: 10%;
+      justify-content: space-between;
+    }
+    .cabecalho-nav
+    {
+      justify-content: center;
+    }
+  }
+  
