--- a/html-15/css/index.css
+++ b/html-15/css/index.css
@@ -49,6 +49,7 @@
       align-items: center;
       justify-content: space-between;
       padding: 5% 15%;
+      gap: 82px;
   }
 
   .conteudo-section
@@ -131,4 +132,21 @@
     text-align: center;
   }
 
+  @media (max-width: 1200px)
+  {
+    .conteudo
+    {
+      flex-direction: column-reverse; 
+    }
+
+    .cabecalho
+    {
+      padding: 10%;
+      justify-content: space-between;
+    }
+    .cabecalho-nav
+    {
+      justify-content: center;
+    }
+  }
   
