--- a/html-16/css/curriculo.css
+++ b/html-16/css/curriculo.css
@@ -17,7 +17,10 @@
   body 
   {
       /* height: 100vh; */
-      background-color: var(--preto);
+      background-image: url(/Public/Debbie\ Balboa.gif);
+      background-size:cover ;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
       color: var(--azul-1)
   }
 
@@ -46,6 +49,11 @@
   .titulo
   {
     font-size: 36px;
+  }
+
+  .titulo1
+  {
+  color: var(--azul-3);
   }
 
   .texto
@@ -89,11 +97,20 @@
     text-decoration: none;
     color: var(--azul-1);
   }
-  
-  .perfil
-  {
 
-  }
+.img
+{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.perfil
+{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 
   @media (max-width: 1200px)
   {
