--- a/Portifólio/css/about.css
+++ b/Portifólio/css/about.css
@@ -7,7 +7,7 @@
     --azul-2: #7da0ca;
     --azul-3: #5483b3;
   }
-  
+
   *
   {
     margin: 0;
@@ -21,9 +21,7 @@
       background-size:cover ;
       background-repeat: no-repeat;
       background-attachment: fixed;
-      color: var(--azul-1);
-      
-      
+      color: var(--azul-1)
   }
 
   .cabecalho
@@ -89,36 +87,20 @@
     color: var(--azul-1);
     display: flex;
     justify-content: center;
-    background-color: var(--azul-3);
+    background-color: var(--azul-2);
     padding: 24px;
-    text-align: center;
   }
 
-  .link
+  .img
   {
-    text-decoration: none;
-    color: var(--azul-1);
+    display: block;
+   
   }
-
-.img
-{
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.perfil
-{
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
   @media (max-width: 1200px)
   {
     .conteudo
     {
-      flex-direction: column-reverse; 
+      flex-direction:column-reverse
     }
     .cabecalho
     {
