--- a/responsividade-1/style.css
+++ b/responsividade-1/style.css
@@ -1,21 +1,13 @@
+@import url(/styles/header.css);
 
-*
-{
-    padding: 0;
-    margin: 0;
-}
 
 :root
 {
-    --background-color:#EBECEE
+    --background-color:#EBECEE;
+    --branco:#ffffff;
 }
 
 body
 {
     background-color: var(--background-color);
-}
-
-h1
-{
-    background-color: white;
 }
