--- a/responsividade-1/styles/header.css
+++ b/responsividade-1/styles/header.css
@@ -4,6 +4,7 @@ background-color: var(--branco);
 display: flex;
 justify-content: space-between ;
 align-items: center;
+position: relative;
 }
 
 .menu-hamburguer
@@ -34,10 +35,12 @@ align-items: center;
 .lista-menu
 {
     display: none;
+    position: absolute;
+    top: 100%;
 
 }
 
-.botao-container
+.botao-container:checked ~ .lista-menu
 {
-    
+ display: block;
 }
