--- a/responsividade-1/styles/header.css
+++ b/responsividade-1/styles/header.css
@@ -19,7 +19,6 @@ position: relative;
 
 }
 
-
 .container
 {
     display: flex;
@@ -43,4 +42,10 @@ position: relative;
 .botao-container:checked ~ .lista-menu
 {
  display: block;
+}
+
+.lista-menu-titulo, .lista-menu-item
+{
+  padding: 1em;
+  background-color: var(--branco);
 }
