--- a/responsividade-1/style.css
+++ b/responsividade-1/style.css
@@ -1,4 +1,5 @@
 @import url(/styles/header.css);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
 
 :root
@@ -7,9 +8,13 @@
     --branco:#ffffff;
     --laranja:#eb9b00 ;
     --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+    --font-familly-poppins:"Poppins", sans-serif;
 }
 
 body
 {
     background-color: var(--background-color);
+    font-family: var(--font-familly-poppins);
+    font-weight: 400;
+    font-size: 16px;
 }
