--- a/responsividade-1/styles/banner.css
+++ b/responsividade-1/styles/banner.css
@@ -17,3 +17,25 @@
     font-weight: 500;
     margin: 1em 0;
 }
+
+.banner-pesquisa
+{
+    background-color: transparent;
+    border: 1px solid var(--branco);
+    color: var(--branco);
+    border-radius: 24px;
+    padding: 1em;
+    width: 100%;
+}
+
+.banner-pesquisa::placeholder
+{
+    font-family: var(--font-familly-poppins);
+    font-weight: 400;
+    font-size: 14px;
+    text-align: center;
+    color: var(--branco);
+    background: url(/Public/Lupa.svg) no-repeat;
+    background-position: 1px ;
+
+}
