--- a/responsividade-1/styles/carrossel.css
+++ b/responsividade-1/styles/carrossel.css
@@ -15,12 +15,9 @@
   width: 100%;
 }
 
-.swiper-button-prev
-{
-  display: none;
-}
-
+.swiper-button-prev,
 .swiper-button-next
 {
   display: none;
 }
+
