--- a/responsividade-1/style.css
+++ b/responsividade-1/style.css
@@ -9,6 +9,7 @@
     --background-color:#EBECEE;
     --branco:#ffffff;
     --laranja:#eb9b00 ;
+    --azul:#002f52;
     --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
     --font-familly-poppins:"Poppins", sans-serif;
 }
