--- a/responsividade-1/styles/carrossel.css
+++ b/responsividade-1/styles/carrossel.css
@@ -26,3 +26,48 @@
   position: initial;
   margin: 0.5em 0;
 }
+
+.card
+{
+  background: var(--branco);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin: 1em;
+  padding: 1em;
+}
+
+.card-descricao
+{
+  display: flex;
+  justify-content: space-between;
+}
+
+.botoes
+{
+  display: flex;
+}
+
+.card-botoes
+{
+  display: flex;
+  justify-content: space-between;
+}
+
+.botoes-item
+{
+  display: flex;
+  justify-content: space-between;
+}
+
+.descricao-titulo
+{
+  font-weight: 700;
+  color: var(--laranja);
+}
+
+.descricao-titulo-livro
+{
+  color: var(--azul);
+  font-size: 18px;
+  font-weight: 700;
+}
