--- a/responsividade-1 - tablet/style.css
+++ b/responsividade-1 - tablet/style.css
@@ -5,6 +5,7 @@
 @import url(/styles/contato.css);
 @import url(/styles/rodape.css);
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
 
 :root
@@ -15,6 +16,7 @@
     --azul:#002f52;
     --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
     --font-familly-poppins:"Poppins", sans-serif;
+    --font-familly-josefin:"Josefin Sans", sans-serif;
 }
 
 body
