--- a/responsividade-1 - tablet/styles/header.css
+++ b/responsividade-1 - tablet/styles/header.css
@@ -70,3 +70,22 @@ position: relative;
     text-transform: uppercase;
     
 }
+
+@media screen and(min-width: 1024px) /*colocamos min quando começamos pelo design mobile e max quando começamos pelo desktop*/
+{
+   .container-titulo,.container-titulo-bold
+   {
+    font-family: var( --font-familly-josefin);
+    font-size: 30px;
+   }
+
+   .container-titulo
+   {
+    font-weight: 400;
+   }
+
+   .container-titulo-bold
+   {
+    font-weight: 700;
+   }
+}
