--- a/responsividade-1 - tablet/style.css
+++ b/responsividade-1 - tablet/style.css
@@ -15,14 +15,14 @@
     --laranja:#eb9b00 ;
     --azul:#002f52;
     --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
-    --font-familly-poppins:"Poppins", sans-serif;
-    --font-familly-josefin:"Josefin Sans", sans-serif;
+    --font-familly-primaria:"Poppins", sans-serif;
+    --font-familly-secundaria:"Josefin Sans";
 }
 
 body
 {
     background-color: var(--background-color);
-    font-family: var(--font-familly-poppins);
+    font-family: var(--font-familly-primaria);
     font-weight: 400;
     font-size: 16px;
 }
