--- a/responsividade-1 - tablet/styles/banner.css
+++ b/responsividade-1 - tablet/styles/banner.css
@@ -30,12 +30,11 @@
 
 .banner-pesquisa::placeholder
 {
-    font-family: var(--font-familly-poppins);
+    font-family: var(--font-familly-primaria);
     font-weight: 400;
     font-size: 14px;
     text-align: center;
     color: var(--branco);
     background: url(/Public/Lupa.svg) no-repeat;
     background-position: 1px ;
-
 }
