--- a/responsividade-1 - tablet/style.css
+++ b/responsividade-1 - tablet/style.css
@@ -14,9 +14,11 @@
     --branco:#ffffff;
     --laranja:#eb9b00 ;
     --azul:#002f52;
+    --preto:#000000;
     --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
     --font-familly-primaria:"Poppins", sans-serif;
     --font-familly-secundaria:"Josefin Sans";
+
 }
 
 body
