--- a/responsividade-1 - tablet/styles/contato.css
+++ b/responsividade-1 - tablet/styles/contato.css
@@ -40,3 +40,29 @@
     background: url(/Public/Email.svg) no-repeat;
     padding-left: 2em;
 }
+
+@media screen and (min-width: 1024px)
+{
+ .contato
+ {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+ 
+.contato-email
+{
+    width: 30%;
+}
+
+ .contato-container
+ {
+   margin-right: 1em;
+   width: 30%;
+ }
+
+ .contato-titulo
+ {
+    font-size: 24px;
+ }
+}
