--- a/responsividade-1 - tablet/styles/topicos.css
+++ b/responsividade-1 - tablet/styles/topicos.css
@@ -35,3 +35,15 @@
     font-weight: 700;
 }
 
+@media screen and (min-width: 1024px)
+{
+  .topicos-titulo
+  {
+    font-size: 24px;
+  }
+
+  .topicos-link
+  {
+    font-size: 24px;
+  }
+}
