--- a/responsividade-1 - tablet/styles/rodape.css
+++ b/responsividade-1 - tablet/styles/rodape.css
@@ -9,7 +9,51 @@ hr
  padding: 1em;
 }
 
+.lista-rodape
+{
+    display: none;
+}
+
 @media screen and (min-width: 1024px)
 {
-  
+  .rodape
+  {
+    display: flex;
+    justify-content: space-around;
+    
+  }
+
+  .lista-rodape
+  {
+    list-style-type: none;
+    display: block;
+  }
+
+ .rodape-titulo-lista
+ {
+   color: var(--cinza-claro);
+   font-size: 24px;
+ }
+
+.rodape-item
+{
+    display: flex;
+    align-items: center;
+    margin: 0.5em 0;
+}
+
+.rodape-link
+{
+    text-decoration: none;
+    color: var(--cinza);
+    margin-left: 0.5em;
+
+}
+
+.rodape-titulo
+{
+    font-size: 24px;
+    font-weight: 300;
+}
+
 }
