--- a/responsividade-1 - desktop/styles/header.css
+++ b/responsividade-1 - desktop/styles/header.css
@@ -77,6 +77,11 @@ position: relative;
     display: none;
 }
 
+.container-texto
+{
+    display: none;
+}
+
 @media screen and (min-width: 1024px) /*colocamos min quando começamos pelo design mobile e max quando começamos pelo desktop*/
  {
 
@@ -135,4 +140,28 @@ position: relative;
 
 }
 
- 
+ @media screen and (min-width:1728px)
+ {
+      .container-link
+      {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+      }
+
+      .container-texto
+      {
+        display: block;
+      }
+
+      .cabecalho
+      {
+        padding: 0 2em;
+      }
+
+      .opcoes
+      {
+        margin-right: auto;
+      }
+ }
