--- a/responsividade-1 - desktop/styles/header.css
+++ b/responsividade-1 - desktop/styles/header.css
@@ -35,7 +35,7 @@ position: relative;
 
 .botao-container:checked ~ .container-rotulo > .menu-hamburguer
 {
-    background-image: url(/Public/Menu\ Aberto.svg);
+    background-image: url(../Public/Menu\ Aberto.svg);
 }
 .lista-menu
 {
