--- a/responsividade-1 - desktop/styles/topicos.css
+++ b/responsividade-1 - desktop/styles/topicos.css
@@ -46,6 +46,17 @@
   {
     font-size: 24px;
   }
+
+.topicos-link:hover
+{
+  background-color: orangered;
+}
+
+.topicos-link:hover:active
+{
+  background-color: var(--azul-degrade);
+}
+
 }
 
 @media screen and (min-width:1728px)
