--- a/responsividade-1 - desktop/style.css
+++ b/responsividade-1 - desktop/style.css
@@ -13,6 +13,7 @@
     --background-color:#EBECEE;
     --branco:#ffffff;
     --laranja:#eb9b00 ;
+    --laranja-escuro:#c98508;
     --azul:#002f52;
     --preto:#000000;
     --cinza:#474646;
