--- a/responsividade-1 - desktop/styles/topicos.css
+++ b/responsividade-1 - desktop/styles/topicos.css
@@ -49,7 +49,7 @@
 
 .topicos-link:hover
 {
-  background-color: orangered;
+  background-color:var(--laranja-escuro);
 }
 
 .topicos-link:hover:active
