--- a/responsividade-1 - desktop/styles/banner.css
+++ b/responsividade-1 - desktop/styles/banner.css
@@ -21,7 +21,7 @@
 .banner-pesquisa
 {
     background-color: transparent;
-    border: 1px solid var(--branco);
+    border: 1px solid;
     color: var(--branco);
     border-radius: 24px;
     padding: 1em;
